# proteus-core

./: .gitignore  AGENTS.md  Cargo.toml  EFFECTS_METERING_CLI.md  EFFECT_METERING_GUIDELINES.md  NOTES.md  README.md  REALTIME_CONFIGURATION_SUGGESTIONS.md  REFACTOR_PLAN.md  ROADMAP.md  STATUS_REPORT.md  STATUS_REPORT_CODEX.md  STATUS_REPORT_COMPARE.md  STYLE_GUIDE.md  log-alt.txt  log-fmt.txt  log.txt  play_settings_guide.rs  real_time_convolution_audio_details.md  real_time_performance.md  real_time_thoughts.md  startup-wins.md
.guides/: Effects_Ideas.md  NOTES.md  PEAKS_PLAN.md  diffusion_reverb.md  real_time_convolution_audio.md  real_time_performance.md  startup-wins.md
.zed/: settings.json
STYLE_ISSUES/: SI-01-container-god-files.md  SI-02-mix-engine-god-files.md  SI-03-player-god-files.md  SI-04-dsp-god-files.md  SI-05-track-decode-god-functions.md  SI-06-spawn-mix-thread-god-function.md  SI-07-peaks-format-god-file.md  SI-08-public-api-doc-gaps.md  SI-09-library-mutex-lock-panics.md  SI-10-playback-state-encapsulation.md  SI-13-effect-chain-hot-path-allocations.md  SI-14-atomic-ordering-contracts.md  SI-15-single-track-seek-failure-reporting.md  SI-16-standalone-track-weighting-gap.md  SI-17-backpressure-wait-timeouts.md  SI-18-float-cast-guardrails.md  SI-19-premix-buffer-data-structure.md  SI-20-track-mix-snapshot-locality.md  SI-21-residual-lock-unwrap-sites.md  SI-22-effect-context-invariants.md  SI-23-decoder-selection-regression-test.md  SI-24-effects-mutex-handoff.md  SI-25-playback-worker-signaling.md  SI-26-decode-worker-error-semantics.md  SI-27-single-container-duration-probing.md  SI-28-samples-buffer-double-copy.md  SI-29-public-api-leakage.md  SI-30-eos-detection-parity.md  SI-31-instance-needs-data-intent.md  SI-32-shared-dsp-utility-extraction.md  SI-33-dead-code-warning-baseline.md  SI-34-critical-mutex-poisoning-policy.md  SI-35-residual-long-functions.md  index.md
SUPPORT_TICKETS/: FR-01-per-effect-level-metering.md  FR-02-inline-effect-parameter-smoothing.md  FR-03-bounded-live-effect-control-latency.md  FR-04-cli-effect-metering-harness.md  FR-05-audible-time-aligned-effect-metering.md  FR-06-cli-spectral-graph-for-shaping-effects.md  ST-01-container-god-files.md  ST-03-player-god-files.md  ST-06-spawn-mix-thread-god-function.md  index.md  (+23 more)
proteus-cli/: Cargo.toml  README.md
proteus-cli/src/: controls.rs  logging.rs  main.rs  project_files.rs  runner.rs  ui.rs
proteus-cli/src/cli/: args.rs  bench.rs  controls.rs  create_cmd.rs  info_cmd.rs  meter_cmd.rs  mod.rs  peaks_cmd.rs  playback_runner.rs  runner.rs  spectral_graph.rs  ui.rs  verify.rs
proteus-cli/tests/: cli_effects_json.rs  runner_integration.rs
proteus-lib/: Cargo.toml  README.md
proteus-lib/src/: buffer.rs  constants.rs  info.rs  lib.rs  logging.rs  peaks.rs  player.rs  player_engine.rs  prot.rs  reporter.rs  test_data.rs  track.rs
proteus-lib/src/audio/: buffer.rs  decode.rs  mod.rs  samples.rs
proteus-lib/src/container/: info.rs  mod.rs  prot.rs  prot_settings.rs
proteus-lib/src/container/info/: aiff.rs  mod.rs  track_info.rs
proteus-lib/src/container/play_settings/: legacy.rs  mod.rs  v1.rs  v2.rs  v3.rs
proteus-lib/src/container/prot/: accessors.rs  helpers.rs  mod.rs  plan.rs  schedule.rs  tests.rs  types.rs
proteus-lib/src/container/prot/plan/: tests.rs
proteus-lib/src/diagnostics/: bench.rs  mod.rs  reporter.rs
proteus-lib/src/dsp/: convolution.rs  guardrails.rs  impulse_response.rs  mod.rs  normalized_spring_impulse_response.rs  reverb.rs  spring_impulse_response.rs  utils.rs
proteus-lib/src/dsp/effects/: biquad.rs  compressor.rs  distortion.rs  gain.rs  high_pass.rs  level.rs  limiter.rs  low_pass.rs  mod.rs  multiband_eq.rs  pan.rs
proteus-lib/src/dsp/effects/basic_reverb/: mod.rs
proteus-lib/src/dsp/effects/convolution_reverb/: convolution.rs  impulse_response.rs  ir_loader.rs  mod.rs  reverb.rs  spec.rs
proteus-lib/src/dsp/effects/core/: biquad.rs  level.rs  mod.rs  smoother.rs
proteus-lib/src/dsp/effects/diffusion_reverb/: mod.rs  primitives.rs
proteus-lib/src/dsp/effects/multiband_eq/: biquad.rs  mod.rs  response.rs
proteus-lib/src/dsp/meter/: frequency_response.rs  level.rs  mod.rs  spectral.rs
proteus-lib/src/effects/: convolution.rs  effects.rs  impulse_response.rs  mod.rs  reverb.rs
proteus-lib/src/logging/: mod.rs  pivot_buffer_trace.rs
proteus-lib/src/peaks/: error.rs  extract.rs  format.rs  mod.rs
proteus-lib/src/peaks/format/: header.rs  io.rs  mod.rs  query.rs  resample.rs  tests.rs
proteus-lib/src/playback/: effect_meter.rs  engine.rs  mod.rs  mutex_policy.rs  output_meter.rs  player.rs
proteus-lib/src/playback/engine/: mix.rs  mod.rs  premix.rs  reverb.rs  state.rs
proteus-lib/src/playback/engine/mix/: buffer_mixer.rs  cover_map.rs  debug.rs  decoder_events.rs  effects.rs  mod.rs  output_stage.rs  runner.rs  source_spawner.rs  track_mix.rs  track_stage.rs  types.rs  utils.rs
proteus-lib/src/playback/engine/mix/buffer_mixer/: aligned_buffer.rs  backpressure.rs  diagnostics.rs  helpers.rs  mixing.rs  mod.rs  packet_router.rs  routing_helpers.rs  routing_time.rs  tests.rs
proteus-lib/src/playback/engine/mix/buffer_mixer/backpressure/: tests.rs
proteus-lib/src/playback/engine/mix/runner/: effect_metering.rs  effects_runtime.rs  loop_body.rs  mod.rs  startup.rs  state.rs
proteus-lib/src/playback/engine/mix/runner/decode/: container_worker.rs  file_worker.rs  mod.rs
proteus-lib/src/playback/engine/mix/runner/loop_body/: tests.rs
proteus-lib/src/playback/player/: builder.rs  controls.rs  effects.rs  lifecycle.rs  locks.rs  metering.rs  mod.rs  notify.rs  runtime.rs  settings.rs  state.rs
proteus-lib/src/playback/player/runtime/: mod.rs  thread.rs  worker.rs
proteus-lib/src/playback/player/runtime/worker/: context.rs  guard.rs  mod.rs  runner.rs  sink.rs  timing.rs  transitions.rs
proteus-lib/src/tests/: mod.rs  orchestration.rs
proteus-lib/src/tools/: decode.rs  effect_meter.rs  mod.rs  timer.rs  tools.rs
proteus-lib/src/track/: buffer.rs  container.rs  context.rs  convert.rs  mod.rs  single.rs
(+100 files in other folders)
