[package]
name = "proteus_audio"
version = "0.2.8"
edition = "2021"
authors = ["Adam Thomas Howard <adamthomashoward@gmail.com>"]
license = "Apache-2.0"
description = "A command line utility and library for playing .prot audio files."
readme = "README.md"
homepage = "https://github.com/Proteus-Audio/proteus-cli"
repository = "https://github.com/Proteus-Audio/proteus-cli"
keywords = ["proteus", "audio", "matroska", "multimedia", "media"]
categories = ["command-line-utilities", "multimedia", "multimedia::audio"]

[[bin]]
name = "prot"
path = "src/main.rs"

[dependencies]
clap = "4.4.7"
dasp_ring_buffer = "0.11.0"
log = "0.4.20"
matroska = "0.26.0"
rand = "0.8.5"
rodio = "0.17.3"
rustfft = "6.1.0"
serde_json = "1.0.108"
symphonia = "0.5.3"
