[package]
name = "proteus-cli"
version = "0.5.7"
edition = "2021"
authors = ["Adam Thomas Howard <adamthomashoward@gmail.com>"]
license-file = "../LICENSE"
description = "A command line utility for playing .prot audio files."
readme = "../README.md"
homepage = "https://github.com/Proteus-Audio/proteus-cli"
repository = "https://github.com/Proteus-Audio/proteus-cli"
keywords = ["proteus", "audio", "matroska", "multimedia", "media"]
categories = ["command-line-utilities", "multimedia", "multimedia::audio"]

[dependencies]
clap = "4.4.7"
crossterm = "0.27.0"
log = "0.4.20"
rand = "0.8.5"
ratatui = "0.26.3"
symphonia = "0.5.3"
proteus-lib = { path = "../proteus-lib", version = "0.5.7" }
colored = "3.1.1"
indicatif = "0.18.3"
text-to-ascii-art = "0.1.10"
dotenv = "0.15.0"
libc = "0.2.155"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"

[features]
default = ["output-meter", "real-fft"]
bench = ["proteus-lib/bench"]
debug = ["proteus-lib/debug"]
real-fft = ["proteus-lib/real-fft"]
complex-fft = ["proteus-lib/complex-fft"]
output-meter = ["proteus-lib/output-meter"]

[[bin]]
name = "prot"
path = "src/main.rs"
