[package]
name = "proteus-lib"
version = "0.3.1"
edition = "2021"
authors = ["Adam Thomas Howard <adamthomashoward@gmail.com>"]
license-file = "../LICENSE"
description = "Library for playing .prot audio files."
readme = "../README.md"
homepage = "https://github.com/Proteus-Audio/proteus-cli"
repository = "https://github.com/Proteus-Audio/proteus-cli"
keywords = ["proteus", "audio", "matroska", "multimedia", "media"]
categories = ["multimedia", "multimedia::audio"]

[lib]
name = "proteus_lib"
path = "src/lib.rs"

[dependencies]
dasp_ring_buffer = "0.11.0"
log = "0.4.20"
matroska = "0.26.0"
rand = "0.8.5"
rodio = "0.17.3"
rustfft = "6.1.0"
serde_json = "1.0.108"
symphonia = "0.5.3"
