[package]
name = "proteus-lib"
version = "0.5.8"
edition = "2021"
authors = ["Adam Thomas Howard <adamthomashoward@gmail.com>"]
license-file = "../LICENSE"
description = "Library for playing .prot audio files."
readme = "../README.md"
homepage = "https://github.com/Proteus-Audio/proteus-cli"
repository = "https://github.com/Proteus-Audio/proteus-cli"
keywords = ["proteus", "audio", "matroska", "multimedia", "media"]
categories = ["multimedia", "multimedia::audio"]

[lib]
name = "proteus_lib"
path = "src/lib.rs"

[dependencies]
dasp_ring_buffer = "0.11.0"
log = "0.4.20"
matroska = "0.26.0"
rand = "0.8.5"
rodio = "0.21.1"
rustfft = { version = "6.1.0", optional = true }
realfft = { version = "3.3.0", optional = true }
serde_json = "1.0.108"
serde = { version = "1.0.197", features = ["derive"] }
symphonia = { version = "0.5.5", features = ["all-codecs", "all-formats"] }

[features]
default = ["real-fft"]
real-fft = ["realfft"]
complex-fft = ["rustfft"]
bench = []
debug = []
output-meter = []
